--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -91,86 +91,297 @@ footer {
 
 /*-----------------------------------------------------------------*/
 
-.post-feature {
-    padding: 24px;
-    background-color: rgba(245, 245, 245, 0.5);
-    -webkit-transition: 0.1s all linear;
-    transition: 0.1s all linear;
-}
-* {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.post-feature span.fs-6 {
-    font-family: "Poppins", sans-serif;
-    padding-left: 32px;
-    color: #272343;
+/*.post-feature {*/
+/*    padding: 24px;*/
+/*    MARGIN: 14PX;*/
+/*    background-color: rgba(245, 245, 245, 0.5);*/
+/*    -webkit-transition: 0.1s all linear;*/
+/*    transition: 0.1s all linear;*/
+/*    border-radius: 5%;*/
+
+/*}*/
+/** {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    outline: 0;*/
+/*    -webkit-box-sizing: border-box;*/
+/*    box-sizing: border-box;*/
+/*}*/
+/*.post-feature span.fs-6 {*/
+/*    font-family: "Poppins", sans-serif;*/
+/*    padding-left: 32px;*/
+/*    color: #272343;*/
+/*}*/
+
+/*.has-line {*/
+/*    position: relative;*/
+/*}*/
+
+/*@media (max-width: 420px)*/
+/*    .fs-6 {*/
+/*        font-size: 14px !important;*/
+/*    }*/
+
+/*    .has-line::after {*/
+/*        position: absolute;*/
+/*        content: '';*/
+/*        top: 50%;*/
+/*        -webkit-transform: translateY(-50%);*/
+/*        transform: translateY(-50%);*/
+/*        left: 0;*/
+/*        background-color: #FB743E;*/
+/*        height: 2px;*/
+/*        width: 24px;*/
+/*    }*/
+
+
+/*    *, ::after, ::before {*/
+/*        box-sizing: border-box;*/
+/*    }*/
+
+/*    .post-feature:hover {*/
+/*        background-color: #FB743E;*/
+/*    }*/
+
+/*    .post-feature:hover .dot,*/
+/*    .post-feature:hover .has-line::after {*/
+/*        background-color: white;*/
+/*    }*/
+
+/*    .post-feature:hover .btn-link svg,*/
+/*    .post-feature:hover .btn-link,*/
+/*    .post-feature:hover span,*/
+/*    .post-feature:hover h6 a,*/
+/*    .post-feature:hover span.fs-6 {*/
+/*        color: white;*/
+/*    }*/
+/*    .featured-category-item a:hover {*/
+/*        background-color: #FB743E;*/
+/*        color: white;*/
+/*    }*/
+/*    .all-tags-list a:hover {*/
+/*        background-color: #FB743E;*/
+/*        color: white;*/
+/*    }*/
+/*    .slick-prev:hover::before {*/
+/*        color: white;*/
+/*    }*/
+
+/*    .slick-next:hover::before {*/
+/*        color: white;*/
+/*    }*/
+
+/*    .slick-prev:hover,*/
+/*    .slick-prev:focus,*/
+/*    .slick-next:hover,*/
+/*    .slick-next:focus {*/
+/*        background-color: #FB743E;*/
+/*    }*/
+
+    .wrapper {
+        display: grid;
+        grid-template-columns: 50%  50%;
+
+    }
+
+/*    .heading {*/
+/*        margin-bottom: 50px;*/
+/*        position: relative;*/
+/*        padding-bottom: 10px;*/
+/*    }*/
+
+/*    .heading::after {*/
+/*        position: absolute;*/
+/*        content: '';*/
+/*        bottom: 0;*/
+/*        left: 0;*/
+/*        width: 112px;*/
+/*        height: 4px;*/
+/*        background-color: #FB743E;*/
+/*    }*/
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
+
+
+body {
+    background: #DFC2F2;
+    background-image: linear-gradient( to right, #ffffb3,#ffe6e6);
+    background-attachment: fixed;
+    background-size: cover;
+
 }
 
-.has-line {
+#container{
+    box-shadow: 0 15px 30px 1px grey;
+    background: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    border-radius: 5px;
+    overflow: hidden;
+    /*margin: 5em auto;*/
+    /*height: 350px;*/
+    margin-bottom: 25px;
+    width: 98%;
+
+
+}
+
+
+
+.product-details {
     position: relative;
+    text-align: left;
+    overflow: hidden;
+    padding: 30px;
+    height: 100%;
+    float: left;
+    width: 40%;
+
 }
 
-@media (max-width: 420px)
-    .fs-6 {
-        font-size: 14px !important;
-    }
+#container .product-details h1{
+    font-family: 'Bebas Neue', cursive;
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    color: #344055;
+    margin: 0;
 
-    .has-line::after {
-        position: absolute;
-        content: '';
-        top: 50%;
-        -webkit-transform: translateY(-50%);
-        transform: translateY(-50%);
-        left: 0;
-        background-color: #FB743E;
-        height: 2px;
-        width: 24px;
-    }
+}
+
+#container .product-details h1:before{
+    position: absolute;
+    content: '';
+    right: 0%;
+    top: 0%;
+    transform: translate(25px, -15px);
+    font-family: 'Bree Serif', serif;
+    display: inline-block;
+    background: #ffe6e6;
+    border-radius: 5px;
+    font-size: 14px;
+    padding: 5px;
+    color: white;
+    margin: 0;
+    animation: chan-sh 6s ease infinite;
+
+}
 
 
-    *, ::after, ::before {
-        box-sizing: border-box;
-    }
 
-    .post-feature:hover {
-        background-color: #FB743E;
-    }
 
-    .post-feature:hover .dot,
-    .post-feature:hover .has-line::after {
-        background-color: white;
-    }
 
-    .post-feature:hover .btn-link svg,
-    .post-feature:hover .btn-link,
-    .post-feature:hover span,
-    .post-feature:hover h6 a,
-    .post-feature:hover span.fs-6 {
-        color: white;
-    }
-    .featured-category-item a:hover {
-        background-color: #FB743E;
-        color: white;
-    }
-    .all-tags-list a:hover {
-        background-color: #FB743E;
-        color: white;
-    }
-    .slick-prev:hover::before {
-        color: white;
-    }
 
-    .slick-next:hover::before {
-        color: white;
-    }
+.hint-star {
+    display: inline-block;
+    margin-left: 0.5em;
+    color: gold;
+    width: 50%;
+}
 
-    .slick-prev:hover,
-    .slick-prev:focus,
-    .slick-next:hover,
-    .slick-next:focus {
-        background-color: #FB743E;
-    }
+
+#container .product-details > p {
+    font-family: 'EB Garamond', serif;
+    text-align: center;
+    font-size: 18px;
+    color: #7d7d7d;
+
+}
+.control{
+    position: absolute;
+    bottom: 20%;
+    left: 22.8%;
+
+}
+.btn {
+
+    transform: translateY(0px);
+    transition: 0.3s linear;
+    background:  #809fff;
+    border-radius: 5px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    color: #eee;
+    padding: 0;
+    margin: 0;
+
+}
+
+.btn:hover{transform: translateY(-6px);
+    background: #1a66ff;}
+
+.btn span {
+    font-family: 'Farsan', cursive;
+    transition: transform 0.3s;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    margin:0;
+
+}
+.btn .price, .shopping-cart{
+    background: #333;
+    border: 0;
+    margin: 0;
+}
+
+.btn .price {
+    transform: translateX(-10%); padding-right: 15px;
+}
+
+.btn .shopping-cart {
+    transform: translateX(-100%);
+    position: absolute;
+    background: #333;
+    z-index: 1;
+    left: 0;
+    top: 0;
+}
+
+.btn .buy {z-index: 3; font-weight: bolder;}
+
+.btn:hover .price {transform: translateX(-110%);}
+
+.btn:hover .shopping-cart {transform: translateX(0%);}
+
+
+
+.product-image {
+    transition: all 0.3s ease-out;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    float: right;
+    width: 45%;
+    display: inline-block;
+}
+
+#container img {width: 100%;height: 100%;}
+
+.info {
+    background: rgba(27, 26, 26, 0.9);
+    font-family: 'Bree Serif', serif;
+    transition: all 0.3s ease-out;
+    transform: translateX(-100%);
+    position: absolute;
+    line-height: 1.8;
+    text-align: left;
+    font-size: 105%;
+    cursor: no-drop;
+    color: #FFF;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+.info h2 {text-align: center}
+.product-image:hover .info{transform: translateX(0);}
+
+.info ul li{transition: 0.3s ease;}
+.info ul li:hover{transform: translateX(50px) scale(1.3);}
+
+.product-image:hover img {transition: all 0.3s ease-out;}
+.product-image:hover img {transform: scale(1.2, 1.2);}
