--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -1,7 +1,7 @@
-html {
+/* html {
     min-height: 100vh;
-    background-color: slategrey;
-}
+    background-color: #e9d8a6ff;
+} */
 table {
     border: 1px solid black;
 }
