updated notations for responsive css

--- a/src/main/resources/static/css/about.css
+++ b/src/main/resources/static/css/about.css
@@ -270,7 +270,7 @@ a{
     }
 } 
 
-/* RESPONSIVE BLOCK   */
+/* RESPONSIVE CSS */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
