--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -68,7 +68,40 @@ input, select {
 	font-size: 14px;
 	-webkit-appearance:none;
 	-moz-appearance:none;
-	appearance:none;
+	appearance: none;
+}
+
+.radio-toolbar {
+	margin: 0px;
+}
+  
+.radio-toolbar input[type="radio"] {
+	opacity: 0;
+	position: fixed;
+	width: 0;
+}
+
+.radio-toolbar label {
+	display: inline-block;
+	background-color: #ddd;
+	padding: 10px 17px;
+	font-family: sans-serif, Arial;
+	font-size: 16px;
+	border: 2px solid #444;
+	border-radius: 25px;
+}
+
+.radio-toolbar label:hover {
+	background-color: #dfd;
+}
+
+.radio-toolbar input[type="radio"]:focus + label {
+	border: 2px dashed #444;
+}
+
+.radio-toolbar input[type="radio"]:checked + label {
+	background-color: #bfb;
+	border-color: #4c4;
 }
 
 .textarea-div {
