--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -93,21 +93,7 @@ nav a {
 
     }
 
-/*    .heading {*/
-/*        margin-bottom: 50px;*/
-/*        position: relative;*/
-/*        padding-bottom: 10px;*/
-/*    }*/
 
-/*    .heading::after {*/
-/*        position: absolute;*/
-/*        content: '';*/
-/*        bottom: 0;*/
-/*        left: 0;*/
-/*        width: 112px;*/
-/*        height: 4px;*/
-/*        background-color: #FB743E;*/
-/*    }*/
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
 
 
@@ -137,7 +123,14 @@ body {
 
 
 
-
+.text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 
 
 
