--- a/src/main/resources/static/css/about.css
+++ b/src/main/resources/static/css/about.css
@@ -148,10 +148,7 @@ a{
 .person-img{
     width:100%;
     height:100%;
-    border-top-left-radius:6px;
-    border-top-right-radius:6px;
-    border-bottom-right-radius:6px;
-    border-bottom-left-radius:6px;
+    border-radius:6px;
 }
 @keyframes bounce{
     0%, 20%, 50%, 80%, 100%{
