--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700;800&family=Roboto:wght@300;400;500&display=swap');
+
 body{
 	background-color: #e9d8a6ff;
 }
@@ -6,12 +8,33 @@ body{
 .userContainer {
 	display: flex;
 	height: 90%;
+	margin: 0 100px;
 }
 .userLeftDiv {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	width: 600px;
 }
 .userRightDiv {
 	width: 600px;
+}
+
+/* USER IMAGE*/
+.userInfoDiv{
+	background-color: #c6bb99ff;
+	border-radius: 20px;
+	-webkit-box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
+	-moz-box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
+	box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
+	padding: 1.5em;
+	@media screen and (min-width: 768px) {
+		padding: 2.5em;
+	}
+}
+.user-img{
+	border: 5px;
+	border-radius: 20px;
 }
 
 /* NEW POST FORM */
@@ -84,7 +107,6 @@ input, select {
 	padding: 10px 17px;
 	font-family: 'Nunito', sans-serif;
 	font-size: 14px;
-	border: 2px solid #444;
 	border-radius: 25px;
 	margin-right: 3px;
 	margin-bottom: 5px;
@@ -174,3 +196,73 @@ textarea {
 		padding: 2.5em;
 	}
 }
+.blogCard{
+    display: flex;
+	background-color:rgb(255, 255, 255);
+    padding-top:16px;
+    padding-right:16px;
+    padding-bottom:16px;
+    padding-left:16px;
+    box-shadow:rgba(95, 95, 95, 0.1) 6px 12px 24px;
+    border-radius: 15px;
+}
+.img-category-box{
+    max-width:130px;
+    max-height:130px;
+    width:100%;
+    height:100%;
+    overflow:hidden;
+    margin-right:25px;
+	border-radius: 15px;
+}
+.category-img{
+	width:100%;
+    height:100%;
+    border-radius:15px;
+}
+.blog-card-content-box{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+}
+.blog-content{
+	font-family: 'Roboto', sans-serif;
+	font-size: 14px;
+	width: 18rem;
+	overflow: hidden;
+	text-overflow: clip;
+	position: relative;
+	/* DISPLAY ONLY FIVE LINES OF TEXT*/
+	display: -webkit-box;
+	-webkit-line-clamp: 5;
+			line-clamp: 5; 
+	-webkit-box-orient: vertical;
+}
+.blog-content::after{
+	/* FADE OUT lAST LINE OF TEXT*/
+	content: '';
+	position: absolute;
+	right: 0%;
+	height: 100%;
+	width: 6rem;
+	background-image: linear-gradient(
+		to right, transparent, white);
+	pointer-events: none;
+}
+.blog-card-btn-box{
+    display: flex;
+}
+.blog-title{
+	font-weight: 500;
+	font-size: 22px;
+}
+.blog-author{
+	font-size: 12px;
+	line-height: normal;
+}
+.blog-category{
+	font-size: 12px;
+	line-height: normal;
+}
+
+
