--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -48,7 +48,8 @@ body{
 .username-header{
 	font-family: 'Nunito', sans-serif;
 	font-weight: 700;
-	font-size: 45px;
+	font-size: 40px;
+	margin-bottom: 0px;
 }
 
 /* NEW POST FORM */
