--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -2,27 +2,19 @@
     min-height: 100vh;
     background-color: #e9d8a6ff;
 } */
-table {
-    border: 1px solid black;
-}
-th {
-   border-bottom: 3px solid black;
-}
-td {
-    border-right: 1px solid red;
-    border-left: 1px solid red;
-    border-bottom: 0.5px solid black;
-}
+
+/* NAV MENU */
 nav a {
     padding: 15px;
 }
+
+/* LOADING ANIMATION */
 .loader {
     text-align: center;
     margin-top: 15%;
     margin-bottom: 20%;
     /*background-color: mediumpurple;*/
 }
-
 .loader p {
     display: inline-block;
     text-transform: uppercase;
@@ -33,31 +25,24 @@ nav a {
     color: #121212;
     -webkit-text-stroke: 1px gray;
 }
-
 .loader  p:nth-child(1) {
     animation: hover 2.5s linear infinite;
 }
-
 .loader  p:nth-child(2) {
     animation: hover 2.5s linear infinite .125s;
 }
-
 .loader  p:nth-child(3) {
     animation: hover 2.5s linear infinite .25s;
 }
-
 .loader  p:nth-child(4) {
     animation: hover 2.5s linear infinite .375s;
 }
-
 .loader p:nth-child(5) {
     animation: hover 2.5s linear infinite .5s;
 }
-
 .loader  p:nth-child(6) {
     animation: hover 2.5s linear infinite .675s;
 }
-
 .loader  p:nth-child(7) {
     animation: hover 2.5s linear infinite .75s;
 }
@@ -82,49 +67,29 @@ nav a {
     }
 }
 
+/* POSTINDEX STYLING */
 
-/*-----------------------css iv added for post page  ------------------------------------------*/
- .wrapper {
-        display: grid;
-        grid-template-columns: 50%  50%;
-
-    }
-/* font from google */
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
-/*------------css for the div cards not --------------*/
-.row{
-    background: rgba(255, 255, 255, 0.90);
-    width: 135%;
+.mainPostDiv{
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 90%;
 }
-
-body {
-    background: lightgrey;
+.post-list{
+    align-items: center;
+    background-color: #c6bb99ff;
+	border-radius: 20px;
+	padding: 1.5em;
+	-webkit-box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
+	-moz-box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
+	box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
+	/* @media screen and (min-width: 768px) {
+		padding: 2.5em;
+	} */
 }
-
-#container{
-
-    text-align: center;
-    border-radius: 5px;
-    overflow: hidden;
-    /*margin: 5em auto;*/
-    /*height: 350px;*/
-    margin-bottom: 44px;
-    width: 88%;
-
-
-}
-
-
-.text {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2; /* number of lines to show */
-    line-clamp: 2;
-    -webkit-box-orient: vertical;
-}
-
-
-.column{
-    width: 80%;
+.wrapper {
+    display: grid;
+    grid-template-columns: 50% 50%;
+	overflow-y: auto;
+    /* max-height: ; */
 }
