--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -35,11 +35,24 @@ body{
 		padding: 2.5em;
 	}
 }
+.user-img-box{
+	max-width:125px;
+	max-height:125px;
+	width:100%;
+	height:100%;
+	overflow-x:hidden;
+	overflow-y:hidden;
+	margin-top:0px;
+	margin-right:25px;
+	margin-bottom:0px;
+	margin-left:0px;
+}
 .user-img{
-	border: 5px;
 	border-radius: 15px;
-	height: 125px;
-	width:125px;
+	/* height: 125px;
+	width:125px; */
+	width:100%;
+	height:100%;
 }
 .usernameDiv{
 	margin-top: auto;
@@ -92,7 +105,7 @@ input, select {
 	margin-bottom: 20px;
 	border-radius: 20px;
 	border: 0;
-	background-color: #e2e2e2;  
+	background-color: rgba(237, 231, 212, 1);  
     font-family: 'Roboto', sans-serif; 
 	font-size: 14px;
 	-webkit-appearance:none;
@@ -163,7 +176,7 @@ textarea {
     margin-right: 30px;
 	border-radius: 20px;
 	border: 0;
-	background-color: #e2e2e2;
+	background-color:rgba(237, 231, 212, 1);
 	font-size: 14px;
     font-family: 'Roboto', sans-serif;
 	height: 150px;
@@ -227,7 +240,7 @@ textarea {
     display: flex;
 	background-color:rgb(255, 255, 255);
     padding: 16px;
-    box-shadow:rgba(95, 95, 95, 0.1) 6px 12px 24px;
+    box-shadow:rgba(95, 95, 95, 0.1) 6px 12px 12px;
     border-radius: 15px;
 	margin-top: 15px;
 	margin-bottom: 15px;
@@ -236,22 +249,26 @@ textarea {
 	height: 200px;
 }
 .img-category-box{
-    max-width:130px;
+    display: flex;
+	flex-direction: column;
+	max-width:130px;
     max-height:130px;
     width:100%;
     height:100%;
-    overflow:hidden;
     margin-right:25px;
-	border-radius: 15px;
+	/* border-radius: 15px; */
 }
 .category-img{
 	width:100%;
     height:100%;
+	object-fit: cover;
     border-radius:15px;
 }
 .blog-category{
-	font-size: 10px;
-	line-height: normal;
+	margin: 10px;
+	font-size: 14px;
+	text-transform: uppercase;
+	align-self: center;
 }
 .blog-card-content-box{
     display:flex;
