--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -67,13 +67,92 @@ nav a {
     }
 }
 
-/* POSTINDEX STYLING */
+/* MAIN PAGE STYLING */
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+/* SEARCH DIV */
+#mainSearchDiv{
+    display: flex;
+}
+#mainTitle{
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 100px;
+}
+#searchBar{
+    padding: 10px 16px;
+	width: 100%;
+	outline: 0;
+	margin-bottom: 20px;
+	border-radius: 20px;
+	border: 0;
+	background-color: rgba(237, 231, 212, 1);  
+    font-family: 'Roboto', sans-serif; 
+	font-size: 14px;
+	-webkit-appearance:none;
+	-moz-appearance:none;
+	appearance: none;
+}
+
+/* CATEGORY LABELS */
+.btn-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 75%;
+    margin:50px;
+}
+.filter-btn{
+    display: inline-block;
+	text-align: center;
+    text-transform: uppercase;
+	padding: 12px 20px;
+	font-family: 'Nunito', sans-serif;
+	font-weight: bold;
+	font-size: 13px;
+	border-radius: 25px;
+}
+.filter-btn[data-id="1"]{
+    background-color: #ae2012ff;
+	border: 2px solid #ae2012ff;
+}
+.filter-btn[data-id="2"]{
+	background-color: #ca6702ff;
+	border: 2px solid #ca6702ff;
+}
+.filter-btn[data-id="3"]{
+	background-color: #ee9b00ff;
+	border: 2px solid #ee9b00ff;
+}
+.filter-btn[data-id="4"]{
+    background-color: #0a9396ff;
+	border: 2px solid #0a9396ff;
+}
+.filter-btn[data-id="5"]{
+	background-color: #005f73ff;
+	border: 2px solid #005f73ff;
+}
+.filter-btn[data-id="all"]{
+	background-color: rgb(176, 155, 120);
+	border: 2px solid rgb(176, 155, 120);
+}
+
+/* BLOG POST LIST */
 .mainPostDiv{
     display: flex;
 	flex-direction: column;
 	justify-content: center;
+    align-items: center;
 	width: 90%;
+}
+.main-post-header{
+    margin-left: 12px;
+    font-size: 28px;
 }
 .post-list{
     align-items: center;
@@ -83,9 +162,7 @@ nav a {
 	-webkit-box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
 	-moz-box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
 	box-shadow: 5px 5px 20px 0px rgba(173,173,173,1);
-	/* @media screen and (min-width: 768px) {
-		padding: 2.5em;
-	} */
+	
 }
 .wrapper {
     display: grid;
