--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -8,6 +8,11 @@ nav a {
     padding: 15px;
 }
 
+footer{
+    text-align: center;
+    margin-top: 200px;
+}
+
 /* LOADING ANIMATION */
 .loader {
     text-align: center;
@@ -78,17 +83,25 @@ main{
 /* SEARCH DIV */
 #mainSearchDiv{
     display: flex;
+    justify-content: center;
+    width: 80%;
 }
-#mainTitle{
+.main-title{
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
-    font-size: 100px;
+    font-weight: 700;
+    font-size: 150px;
+    margin-right: 30px;
+}
+#searchWrapper{
+    display: flex;
+    width: 35%;
 }
 #searchBar{
-    padding: 10px 16px;
-	width: 100%;
+    padding: 12px 16px;
+    width: 100%;
 	outline: 0;
-	margin-bottom: 20px;
+	margin-top: 30%;
+    margin-bottom: 25%;
 	border-radius: 20px;
 	border: 0;
 	background-color: rgba(237, 231, 212, 1);  
@@ -105,7 +118,8 @@ main{
     justify-content: space-evenly;
     align-items: center;
     width: 75%;
-    margin:50px;
+    margin-top: 0px;
+    margin-bottom:70px;
 }
 .filter-btn{
     display: inline-block;
@@ -151,8 +165,11 @@ main{
 	width: 90%;
 }
 .main-post-header{
+    margin-top: 15px;
     margin-left: 12px;
-    font-size: 28px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    text-align: center;
 }
 .post-list{
     align-items: center;
