--- a/src/main/resources/static/css/about.css
+++ b/src/main/resources/static/css/about.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700;800&family=Roboto:wght@300;400;500&display=swap');
 
 /* ABOUT CSS */
-.icon-block svg{
+/* .icon-block svg{
   width:100%;
   height:100%;
-}
+} */
 *{
 font-family:Nunito, sans-serif;
 }
@@ -13,6 +13,7 @@ font-family:Nunito, sans-serif;
   row-gap:1.3rem;
   column-gap:1.3rem;
 }
+/* TEXT-BLK ALSO EFFECTS BLOG CARDS */
 .text-blk{
   margin-top:0px;
   margin-right:0px;
@@ -52,14 +53,17 @@ font-family:Nunito, sans-serif;
   margin-left:0px;
   justify-content:center;
 }
+/* ABOUT HEADER */
 .section-head{
-  font-size:60px;
+  font-size:75px;
+  font-weight: 700;
   line-height:70px;
   margin-top:0px;
   margin-right:0px;
   margin-bottom:24px;
   margin-left:0px;
 }
+/* ABOUT DESCRIPTION */
 .section-body{
   font-size:14px;
   line-height:18px;
@@ -93,6 +97,7 @@ font-family:Nunito, sans-serif;
   margin-right:25px;
   margin-bottom:0px;
   margin-left:0px;
+  border-radius: 6px;
 }
 .card{
   background-color:rgb(255, 255, 255);
@@ -144,7 +149,6 @@ a{
   padding-right:50px;
   padding-bottom:0px;
   padding-left:50px;
-  background-color: #FAF8CD;
 }
 .person-img{
   width:100%;
